--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,16 +1,14 @@
-.container {
-}
 
 .title {
-  font-size: 60px;
-  margin-bottom: 100px;
+  font-size: 40px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
 .content {
   display: flex;
   align-items: center;
-  gap: 100px;
+  justify-content: center;
 }
 
 .imgContainer {
@@ -50,4 +48,9 @@
   border: 3px solid #bbb;
   font-size: 20px;
   font-weight: bold;
+  border-radius: 10px;
+}
+.button{
+  font-size: 12px;
+  font-weight: 600;
 }
