--- a/src/app/dashboard/(auth)/register/page.module.css
+++ b/src/app/dashboard/(auth)/register/page.module.css
@@ -27,7 +27,7 @@
     width: 300px;
     padding: 20px;
     cursor: pointer;
-    background-color: #53c28b;
+    background-color: #59bce4;
     border: none;
     border-radius: 5px;
     color: #eee;
