--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
-    "Ubuntu Monospace", "Source Code Pro", "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-mono: 'Comfortaa', sans-serif;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -48,8 +47,11 @@
   }
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
+  font-family: 'Comfortaa', sans-serif !important;
   padding: 0;
   margin: 0;
 }
@@ -73,13 +75,13 @@ a {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1800px;
   min-height: 100vh;
-  margin: 0 auto;
-  padding: 0 60px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
+  padding: 100px;
+  margin: 0px auto;
 }
 .theme {
   transition: 1s ease-in-out;
@@ -91,6 +93,9 @@ a {
 .dark {
   background-color: black;
   color: white;
+}
+.base-bg-color{
+  background-color: #59bce4;
 }
 
 @media (prefers-color-scheme: dark) {
