--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 100px;
+  margin-left: 30px;
 }
 
 .item {
@@ -12,7 +13,7 @@
 }
 
 .title {
-  font-size: 72px;
+  font-size: 65px;
 }
 
 .img {
@@ -31,6 +32,6 @@
 }
 
 .desc {
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 300;
 }
